@@ -65,26 +65,6 @@ void WindowSDLOpenGL::init(int width,
 		throw exception;
 	}
 
-	glClearColor(0.0f, 0.0f, 0.0f, 0.0f);
-	
-	glViewport(0, 0, mWidth, mHeight);
-	
-	glMatrixMode(GL_PROJECTION);
-	glLoadIdentity();
-	
-	glOrtho(0.0f, mWidth, mHeight, 0.0f, -1.0f, 1.0f);
-	
-	glMatrixMode(GL_MODELVIEW);
-	glLoadIdentity();
-
-	glEnable(GL_BLEND);
-	glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);
-
-	glEnable(GL_LINE_SMOOTH);
-	glEnable(GL_POINT_SMOOTH);
-	glHint(GL_LINE_SMOOTH_HINT, GL_DONT_CARE);
-	glHint(GL_POINT_SMOOTH_HINT, GL_DONT_CARE);
-
 	mRootLayer = new LayerOpenGL();
 	mRootLayer->_setRoot(mWidth, mHeight);
 	((LayerOpenGL*)mRootLayer)->_setClearOnUpdate(mClearOnUpdate);
